Updated conferences and fixed a typo

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                   <div class="count-box">
                     <i class="bi bi-book" style="color: #003cff;"></i>
                     <!-- <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span> -->
-                    <span>5</span>
+                    <span>6</span>
                     <p><strong>Conference Presentations</strong>
                       <!-- <br>Transportation Research Board -->
                       <br>INFORMS
@@ -388,6 +388,15 @@
         </div>
 
         <div class="row projects-container">
+          <div class="col-lg-12 col-md-8 projects-item filter-app">
+            <div class="projects-img"><img src="assets/img/projects/projects-1.jpg" class="img-fluid" alt=""></div>
+            <div class="projects-info">
+              <h4> Barman, Simanta and Levin, Michael, Throughput Properties and Optimal Locations for Limited
+              Deployment of Max-Pressure Controls.
+              </h4>
+              <p>Presented at: 102st Annual Meeting of the Transportation Research Board in Washington, D.C. (January 2023)</p>
+            </div>
+          </div>
 
           <div class="col-lg-12 col-md-8 projects-item filter-app">
             <div class="projects-img"><img src="assets/img/projects/projects-1.jpg" class="img-fluid" alt=""></div>
@@ -516,7 +525,7 @@
                 <div class="post-content col-lg-9">
 
                 <h3><a href="https://github.com/SBrman/Machine-Learning">Machine Learning Algorithms</a></h3>
-                <ul> <strong> From Scratch sing Numpy </strong>
+                <ul> <strong> From Scratch using Numpy </strong>
                   <li> K-means Clustering </li>
                   <li> Principal Component Analysis </li>
                   <li> Discriminant Analysis </li>
@@ -583,7 +592,7 @@
                   <ul> <strong> Implemented Solvers: </strong> <br>
                     <li> Unconstrained Optimization </li>
                       <ul>
-                        <li> Gradient Descent using Bisection & Golden Search</li>
+                        <li> Gradient Descent using bisection & golden-section search</li>
                         <li> Newton Raphson </li>
                       </ul><br>
                     <li> Simplex Algorithm </li>
