Update Erdos number

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <div class="container">
                 <br></br>
                   <div class="col-lg-14">
-                    <h5 class="resume-title">My <a href="https://en.wikipedia.org/wiki/Erdos_number">Erdös number</a> is 6:</h5>
+                    <h5 class="resume-title">My <a href="https://en.wikipedia.org/wiki/Erdos_number">Erdös number</a> is 5:</h5>
                       <a href="https://en.wikipedia.org/wiki/Paul_erdos">Paul Erdös</a> 
                       <i class="bi bi-arrow-right"></i>
                       <a href="https://en.wikipedia.org/wiki/Menachem_Magidor">Menachem Magidor</a>
@@ -125,8 +125,8 @@
                       <i class="bi bi-arrow-right"></i>
                       <a href="https://en.wikipedia.org/wiki/Peter_Stone_%28professor%29">Peter Stone</a>
                       <i class="bi bi-arrow-right"></i>
-                      <a href="https://sboyles.github.io"> Stephen Boyles</a>
-                      <i class="bi bi-arrow-right"></i>
+                      <!-- <a href="https://sboyles.github.io"> Stephen Boyles</a>
+                      <i class="bi bi-arrow-right"></i> -->
                       <a href="https://sites.google.com/umn.edu/mlevin/home"> Michael Levin</a>
                       <i class="bi bi-arrow-right"></i>
                       <a href="https://sbrman.github.io"> Simanta Barman</a>
