Fix 1st presented conference

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
               <h4> Barman, Simanta and Levin, Michael, Throughput Properties and Optimal Locations for Limited
               Deployment of Max-Pressure Controls.
               </h4>
-              <p>Presented at: 102st Annual Meeting of the Transportation Research Board in Washington, D.C. (January 2023)</p>
+              <p>Presented at 102nd Annual Meeting of the Transportation Research Board in Washington, D.C. (January 2023)</p>
             </div>
           </div>
 
