--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Departments:</strong></li>
                     <ol>
-                      <li><a href="https://cse.umn.edu/cege"> Civil, Environmental, and Geo- Engineering &nbsp;(CEGE)</a></li>
                       <li><a href="https://cse.umn.edu/isye"> Industrial and Systems Engineering &nbsp;(ISyE)</a></li>
+                      <li><a href="https://cse.umn.edu/cege"> Civil, Environmental, and Geo- Engineering &nbsp;(CEGE)</a></li>
                     </ol>
                     <li><i class="bi bi-chevron-right"></i> <strong>Institute:</strong> University of Minnesota, Twin Cities</li>
                   </ul>
@@ -153,7 +153,6 @@
                     <p><strong>Peer-reviewed Journal Publications</strong>
                     <br> Transportation Research Part C, 
                     <br> Transportation Research Record
-                    <br> (1 under review)
                   </p>
                   </div>
                 </div>
@@ -356,10 +355,9 @@
           <div class="col-lg-12 col-md-6 projects-item filter-app">
             <div class="projects-img"><img src="assets/img/projects/projects-1.jpg" class="img-fluid" alt=""></div>
             <div class="projects-info">
-              <h4> 1. Barman, Simanta and Levin, Michael, Throughput Properties and Optimal Locations for Limited
-              Deployment of Max-Pressure Controls. Available at SSRN: https://ssrn.com/abstract=4180323 or
-              http://dx.doi.org/10.2139/ssrn.4180323 (Under review). <a href="https://ssrn.com/abstract=4180323"
-              class="details-link" title="More Details"><i class="bx bx-link">Link</i></a></h4>
+              <h4> 1. Barman, S. & Levin, M. W. (2023). Throughput Properties and Optimal Locations for Limited
+              Deployment of Max-Pressure Controls. Transportation Research Part C: Emerging Technologies, 150, 104105.
+              <a href="https://www.sciencedirect.com/science/article/pii/S0968090X23000943" class="details-link" title="More Details"><i class="bx bx-link">Link</i></a>
             </div>
           </div>
 
@@ -570,7 +568,7 @@
                       <ul> 
                         <li><strong> Link Based: </strong> Method of Succesive Averages (MSA), Frank-Wolfe, Conjugate Frank-Wolfe, 
                         Simplical Decomposition, Diagonalization </li>
-                        <li><strong> Stochastic User Equilibrium (SUE): </strong> STOCH algorithm & using MSA </li>
+                        <li><strong> Stochastic User Equilibrium (SUE): </strong> STOCH algorithm using MSA </li>
                         <li><strong> Path Based: </strong> Gradient Projection </li>
                       </ul>
                   </ul>
