--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
                 <div class="col-lg-6 justify-content-center">
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Simanta Barman</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Position:</strong> <span>Graduate Research Assistant</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Lab:</strong> <span>CAVe Lab</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Advisor:</strong> <span> <a href="https://sites.google.com/umn.edu/mlevin/home">Michael W. Levin</a></span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Position:</strong> Graduate Research Assistant, CAVe lab<span></span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Advisors:</strong> <span> 
+                      <a href="https://sites.google.com/umn.edu/mlevin/home">Michael W. Levin</a>,
+                      <a href="https://www-users.cse.umn.edu/~gini/">Maria Gini</a>
+                    </span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Other Profiles:</strong> <a
                     href="https://scholar.google.com/citations?user=tCUB-C8AAAAJ&hl=en&oi=ao"> Google Scholar</a>,&nbsp;
                       <a href="https://orcid.org/0000-0002-6007-5528"> ORCiD</a></li>
@@ -117,6 +119,7 @@
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Departments:</strong></li>
                     <ol>
+                      <li><a href="https://cse.umn.edu/cs"> Computer Science &nbsp;(CS)</a></li>
                       <li><a href="https://cse.umn.edu/isye"> Industrial and Systems Engineering &nbsp;(ISyE)</a></li>
                       <li><a href="https://cse.umn.edu/cege"> Civil, Environmental, and Geo- Engineering &nbsp;(CEGE)</a></li>
                     </ol>
@@ -162,10 +165,10 @@
                     <i class="bi bi-book" style="color: #003cff;"></i>
                     <!-- <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span> -->
                     <span>4</span>
-                    <p><strong>New Publications in Preparation</strong>
+                    <p><strong>Publications in Preparation</strong>
                       <br> Optimal Ramp Metering
                       <br> Optimal Airline Overbooking model
-                      <br> Variation of Max Pressure Control 
+                      <br> Variations of Max Pressure Control 
                       <br> Shared Autonomous Vehicle Dispatching </p>
                   </div>
                 </div>
@@ -188,13 +191,14 @@
                   <div class="count-box">
                     <i class="bi bi-book" style="color: #003cff;"></i>
                     <!-- <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span> -->
-                    <span>6</span>
+                    <span>7</span>
                     <p><strong>Conference Presentations</strong>
                       <!-- <br>Transportation Research Board -->
                       <br>INFORMS
                       <br>Annual Meeting of the Transportation Research Board
                       <br>American Society of Civil Engineers, ICTD
                       <br>CTS Transportation Research Conference
+                      <br>International Symposium on Dynamic Traffic Assignment
                     </p>
                   </div>
                 </div>
@@ -265,7 +269,7 @@
               projects including 2 National Science Foundation sponsored projects</em></p>
               <p><em> 
               <i class="bi bi-chevron-right"></i>
-              Excellent communication skills resulting in 3 peer-reviewed journal papers, 5 conference
+              Excellent communication skills resulting in 3 peer-reviewed journal papers, 7 conference
               presentations and several seminar talks</em></p>
               </p>
             </div>
@@ -370,7 +374,7 @@
         </div>
 
         <div class="row projects-container">
-          <div class="col-lg-12 col-md-6 projects-item filter-app">
+          <div class="col-lg-12 projects-item filter-app">
             <div class="projects-img"><img src="assets/img/projects/projects-1.jpg" class="img-fluid" alt=""></div>
             <div class="projects-info">
               <h4> 1. Barman, S. & Levin, M. W. (2023). Throughput Properties and Optimal Locations for Limited
@@ -379,7 +383,7 @@
             </div>
           </div>
 
-          <div class="col-lg-12 col-md-6 projects-item filter-web">
+          <div class="col-lg-12 projects-item filter-web">
             <div class="projects-img"><img src="assets/img/projects/projects-2.jpg" class="img-fluid" alt=""></div>
             <div class="projects-info">
               <h4> 2. Barman, S., & Levin, M. W. (2022). Performance Evaluation of Modified Cyclic Max-Pressure
@@ -389,7 +393,7 @@
             </div>
           </div>
 
-          <div class="col-lg-12 col-md-6 projects-item filter-app">
+          <div class="col-lg-12 projects-item filter-app">
             <div class="projects-img"><img src="assets/img/projects/projects-3.jpg" class="img-fluid" alt=""></div>
             <div class="projects-info">
               <h4> 3. Xu, T., Barman, S., Levin, M. W., Chen, R., & Li, T. (2022). Integrating public transit signal
@@ -415,7 +419,7 @@
         </div>
 
         <div class="row projects-container">
-          <div class="col-lg-12 col-md-8 projects-item filter-app">
+          <div class="col-lg-12 projects-item filter-app">
             <div class="projects-img"><img src="assets/img/projects/projects-1.jpg" class="img-fluid" alt=""></div>
             <div class="projects-info">
               <h4> Barman, Simanta and Levin, Michael, Throughput Properties and Optimal Locations for Limited
@@ -425,7 +429,7 @@
             </div>
           </div>
 
-          <div class="col-lg-12 col-md-8 projects-item filter-app">
+          <div class="col-lg-12 projects-item filter-app">
             <div class="projects-img"><img src="assets/img/projects/projects-1.jpg" class="img-fluid" alt=""></div>
             <div class="projects-info">
               <h4>Barman S. & M. W. Levin. Performance evaluation of modified cyclic max pressure controlled
@@ -440,16 +444,20 @@
             </div>
           </div>
 
-          <div class="col-lg-12 col-md-6 projects-item filter-web">
+          <div class="col-lg-12 projects-item filter-web">
             <div class="projects-img"><img src="assets/img/projects/projects-2.jpg" class="img-fluid" alt=""></div>
             <div class="projects-info">
-              <h4>Barman S., R.C. Antúnez, R. Stern & M. W. Levin. Efficient Traffic Flow Estimation using Mobile Data Sources for Pedestrian
+              <h4>Barman S., M. W. Levin & R. Stern. Efficient Traffic Flow Estimation using Mobile Data Sources for Pedestrian
                 and Bicycle Traffic Considering All Possible Paths.</h4>
-              <p>Presented at ASCE ICTD 2022 in Seattle, WA (June 2022)</p>
+              <p>Presented at:</p>
+              <ol>
+                <li>ASCE ICTD 2022 in Seattle, WA (June 2022)</li>
+                <li>9th International Symposium on Dynamic Traffic Assignment 2023 in Evanston, IL (July 2023)</li>
+              </ol>
             </div>
           </div>
 
-          <div class="col-lg-12 col-md-6 projects-item filter-app">
+          <div class="col-lg-12 projects-item filter-app">
             <div class="projects-img"><img src="assets/img/projects/projects-3.jpg" class="img-fluid" alt=""></div>
             <div class="projects-info">
               <h4>Xu, T., S. Barman, M. W. Levin, R. Chen, & T. Li. Integrating public transit signal priority into max-pressure signal control:
@@ -475,7 +483,7 @@
         </div>
 
         <div class="row projects-container">
-          <div class="col-lg-12 col-md-6 projects-item filter-app">
+          <div class="col-lg-12 projects-item filter-app">
             <div class="projects-img"><img src="assets/img/projects/projects-1.jpg" class="img-fluid" alt=""></div>
               <div class="projects-info">
                   <h4>TRAFFIC FLOW ESTIMATION USING MOBILE DATA</h4>
